--- a/DesafioMVC/Views/Clientes/Create.cshtml
+++ b/DesafioMVC/Views/Clientes/Create.cshtml
@@ -7,11 +7,11 @@
 
 <h1>Criar Cliente</h1>
 
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger">
+            
                 <div class="form-group">
                     <label asp-for="Nome" class="control-label"></label>
                         <input asp-for="Nome" type="text" class="form-control"/>
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label asp-for="Idade" class="control-label"></label>
                         <input asp-for="Idade" type="number" class="form-control"/>
-                        <span asp-validation-for="Idade class="text-danger"></span>
+                        <span asp-validation-for="Idade" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Salario" class="control-label"></label>
@@ -32,7 +32,7 @@
                         <input asp-for="Email" type="text" class="form-control"/>
                         <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
-            </div>
+            
         </form>
     </div>
 </div>
