--- a/DesafioMVC/Views/Clientes/Index.cshtml
+++ b/DesafioMVC/Views/Clientes/Index.cshtml
@@ -14,6 +14,9 @@
             <th>
                 @Html.DisplayNameFor(model=>model.Nome)
             </th>
+            <th>
+                Opções
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +28,9 @@
                 </td>
                 <td>
                     @cliente.Nome
+                </td>
+                <td>
+                    <a class="btn btn-primary" asp-controller="Clientes" asp-action="Edit" asp-route-id="@cliente.Id" >Editar</a>
                 </td>
             </tr>
         }
